--- a/po/pt.po
+++ b/po/pt.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-26 18:39-0400\n"
-"PO-Revision-Date: 2025-06-16 12:59+0000\n"
+"POT-Creation-Date: 2025-06-26 20:56-0400\n"
+"PO-Revision-Date: 2025-06-23 23:06+0000\n"
 "Last-Translator: Cirnos <cirnos@tuta.io>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/protonplus/"
 "protonplus/pt/>\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"X-Generator: Weblate 5.13-dev\n"
 
 #: src/widgets/application.vala:83
 msgid "A modern compatibility tools manager for Linux."
@@ -297,10 +297,13 @@ msgid "No profile was found."
 msgstr ""
 
 #: src/widgets/library/library-box.vala:135
+#, fuzzy
 msgid ""
 "Make sure to connect yourself at least one time otherwise report this issue "
 "on GitHub."
 msgstr ""
+"Nenhum perfil foi encontrado. Certifique-se de se conectar pelo menos uma "
+"vez, caso contrário, reporte este problema no GitHub."
 
 #: src/widgets/library/library-box.vala:162
 #: src/widgets/library/game-row.vala:23 src/widgets/library/game-row.vala:144
