--- a/po/cs.po
+++ b/po/cs.po
@@ -1,19 +1,20 @@
-#
 # Daniel Rusek <mail@asciiwolf.com>, 2023.
-#
+# "M.M." <martin.miscikms@gmail.com>, 2025.
 msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-06-29 12:25-0400\n"
-"PO-Revision-Date: 2025-02-16 11:46+0100\n"
-"Last-Translator: Daniel Rusek <mail@asciiwolf.com>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2025-06-29 16:59+0000\n"
+"Last-Translator: \"M.M.\" <martin.miscikms@gmail.com>\n"
+"Language-Team: Czech <https://hosted.weblate.org/projects/protonplus/"
+"protonplus/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.5\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Weblate 5.13-dev\n"
 
 #: src/widgets/application.vala:83
 msgid "A modern compatibility tools manager for Linux."
@@ -33,7 +34,7 @@ msgstr ""
 
 #: src/widgets/window.vala:44
 msgid "Go back"
-msgstr ""
+msgstr "Jdi zpět"
 
 #: src/widgets/window.vala:70
 #, c-format
@@ -164,7 +165,7 @@ msgstr ""
 #: src/widgets/library/default-tool-dialog.vala:60
 #: src/widgets/library/compatibility-tool-dropdown.vala:70
 msgid "Please report this issue on GitHub."
-msgstr ""
+msgstr "Prosím oznamte tuto chybu na GitHubu"
 
 #: src/widgets/main/install-dialog.vala:23
 #: src/widgets/main/upgrade-dialog.vala:23
@@ -281,7 +282,7 @@ msgstr ""
 
 #: src/widgets/library/library-box.vala:82
 msgid "Name"
-msgstr ""
+msgstr "Jméno"
 
 #: src/widgets/library/library-box.vala:85
 #: src/widgets/library/mass-edit-dialog.vala:38
@@ -291,15 +292,15 @@ msgstr "Moderní správce nástrojů kompatibility pro Linux."
 
 #: src/widgets/library/library-box.vala:88
 msgid "Other"
-msgstr ""
+msgstr "Ostatní"
 
 #: src/widgets/library/library-box.vala:126
 msgid "Library"
-msgstr ""
+msgstr "Knihovna"
 
 #: src/widgets/library/library-box.vala:141
 msgid "No profile was found."
-msgstr ""
+msgstr "Žádný profil nebyl nalezen"
 
 #: src/widgets/library/library-box.vala:141
 msgid ""
