--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,10 +7,9 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-06-29 23:26-0400\n"
-"PO-Revision-Date: 2025-06-27 20:16+0800\n"
+"PO-Revision-Date: 2025-06-30 19:35+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
-"Language-Team: Chinese (Traditional Han script) <https://hosted.weblate.org/"
-"projects/protonplus/protonplus/zh_Hant/>\n"
+"Language-Team: CodeBay.IN\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -272,34 +271,32 @@ msgstr "其它"
 
 #: src/widgets/games/games-box.vala:118 src/widgets/games/games-box.vala:240
 msgid "An error occured"
-msgstr ""
+msgstr "發生錯誤"
 
 #: src/widgets/games/games-box.vala:118
 msgid "No profile was found."
 msgstr "未找到個人檔案。"
 
 #: src/widgets/games/games-box.vala:118
-#, fuzzy
 msgid "Make sure to connect yourself at least once on Steam."
-msgstr "請確保至少連線過一次，否則請在 GitHub 上回報此問題。"
+msgstr "請確保至少連接過一次 Steam。"
 
 #: src/widgets/games/games-box.vala:118
 msgid "If you think this is an issue, make sure to report this on GitHub."
-msgstr ""
+msgstr "若您認為這是個問題，請務必在 GitHub 上回報。"
 
 #: src/widgets/games/games-box.vala:170
 msgid "Unsuported launcher"
-msgstr ""
+msgstr "未支援的啟動器"
 
 #: src/widgets/games/games-box.vala:170
-#, fuzzy
 msgid "is currently not supported."
-msgstr "不支援 %s"
+msgstr "目前尚未支援。"
 
 #: src/widgets/games/games-box.vala:170
 msgid ""
 "If you want me to speed up the development make sure to show your support!"
-msgstr ""
+msgstr "若希望我加快開發速度，請務必表達您的支持！"
 
 #: src/widgets/games/games-box.vala:218
 #: src/widgets/games/mass-edit-dialog.vala:109
