--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-30 16:42-0400\n"
-"PO-Revision-Date: 2025-06-30 19:35+0800\n"
+"POT-Creation-Date: 2025-07-02 00:26+0800\n"
+"PO-Revision-Date: 2025-07-02 00:32+0800\n"
 "Last-Translator: nick.exe <nick.exe@gmail.com>\n"
 "Language-Team: CodeBay.IN\n"
 "Language: zh_TW\n"
@@ -57,6 +57,15 @@ msgstr "關於 ProtonPlus(_A)"
 #: src/widgets/window.vala:60
 msgid "Main Menu"
 msgstr "主選單"
+
+#: src/widgets/window.vala:65 src/models/launchers/bottles.vala:29
+#: src/models/launchers/steam.vala:42
+msgid "Runners"
+msgstr "運行器"
+
+#: src/widgets/window.vala:66
+msgid "Games"
+msgstr "遊戲庫"
 
 #: src/widgets/runners/description-dialog.vala:14
 msgid "More information"
@@ -290,8 +299,9 @@ msgid "Unsuported launcher"
 msgstr "未支援的啟動器"
 
 #: src/widgets/games/games-box.vala:170
-msgid "is currently not supported."
-msgstr "目前尚未支援。"
+#, c-format
+msgid "%s is currently not supported."
+msgstr "目前尚未支援 %s。"
 
 #: src/widgets/games/games-box.vala:170
 msgid ""
@@ -330,12 +340,13 @@ msgid "Mass edit"
 msgstr "批量編輯"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "game selected"
-msgstr "款遊戲已選取"
+msgid "1 game selected"
+msgstr "已選取 1 款遊戲"
 
 #: src/widgets/games/mass-edit-dialog.vala:20
-msgid "games selected"
-msgstr "款遊戲已選取"
+#, c-format
+msgid "%u games selected"
+msgstr "已選取 %u 款遊戲"
 
 #: src/widgets/games/mass-edit-dialog.vala:22
 #: src/widgets/games/launch-options-dialog.vala:14
@@ -381,8 +392,8 @@ msgstr "請啟用要在批量編輯中涵蓋的所有選項。"
 #: src/widgets/games/mass-edit-dialog.vala:147
 msgid ""
 "When trying to change the compatibility tool/launch options of the selected "
-"games an error occured for the following games"
-msgstr "嘗試變更所選遊戲的相容性工具/啟動選項時，下列遊戲發生錯誤"
+"games an error occured for the following games:"
+msgstr "嘗試變更所選遊戲的相容性工具/啟動選項時，下列遊戲發生錯誤："
 
 #: src/widgets/games/shortcut-button.vala:23
 #: src/widgets/games/shortcut-button.vala:28
@@ -503,10 +514,6 @@ msgstr "選擇所需的相容性工具"
 msgid "When trying to change the compatibility tool of %s an error occured."
 msgstr "嘗試變更 %s 的相容性工具時發生錯誤。"
 
-#: src/models/launchers/bottles.vala:29 src/models/launchers/steam.vala:42
-msgid "Runners"
-msgstr "運行器"
-
 #: src/models/launchers/bottles.vala:29 src/models/launchers/hgl.vala:32
 #: src/models/launchers/lutris.vala:36
 msgid "Compatibility tools for running Windows software on Linux."
@@ -614,6 +621,21 @@ msgid ""
 msgstr ""
 "讓您能以圖形介面輕鬆設定的 Steam 工具，專門調整用於 Windows 遊戲和原生 Linux "
 "遊戲的各種相容性工具。"
+
+#: data/ui/gtk/help-overlay.ui:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr "一般"
+
+#: data/ui/gtk/help-overlay.ui:14
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr "顯示捷徑鍵"
+
+#: data/ui/gtk/help-overlay.ui:20
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "離開"
 
 #~ msgid "Library"
 #~ msgstr "遊戲庫"
